Add comments to the data access notebook

--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "788a6dc1-ec4c-48aa-a3b8-d0de349c418a",
+   "metadata": {},
+   "source": [
+    "## Data Access demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88d55bcb-6eba-4ac3-af24-67c5d286921f",
+   "metadata": {},
+   "source": [
+    "[OWSLib](https://geopython.github.io/OWSLib) is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bfc4d810-e4c0-42a4-9af7-d1290e510671",
@@ -12,6 +28,22 @@
     "from owslib.wcs import WebCoverageService\n",
     "import lxml.etree\n",
     "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23a0f74-e8d4-4996-bf7c-dc4f373a0263",
+   "metadata": {},
+   "source": [
+    "### Data Discovery"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e2ded5-4098-40b5-b1f9-43c5ee595a19",
+   "metadata": {},
+   "source": [
+    "The user has already discovered the dataset to use by using the OWSLib CSW client"
    ]
   },
   {
@@ -37,11 +69,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e77e8868-8dad-4e89-845f-1aabecfb608a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scene_id='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'\n",
+    "scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1bdb298b-6c51-4b64-888c-1209eeb04bdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])"
+    "csw.getrecordbyid(id=[scene_id])"
    ]
   },
   {
@@ -51,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'].references"
+    "links = csw.records[scene_id].references"
    ]
   },
   {
@@ -69,6 +112,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c637632-a9df-4675-b848-3cf972d0db56",
+   "metadata": {},
+   "source": [
+    "### Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "014dbb9a-0456-4bb0-8d27-03d221f86fcc",
+   "metadata": {},
+   "source": [
+    "After discovering the dataset, the user can identify the WMS link and use the OWSLib WMs client to visualize the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "21f7e4ca-08b7-4322-b927-16a169a0c9e6",
@@ -76,6 +135,14 @@
    "outputs": [],
    "source": [
     "wms = WebMapService(wms_endpoint, version='1.3.0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b197f6-8bf5-4f6c-b515-5e9785fb5380",
+   "metadata": {},
+   "source": [
+    "The list of layers available to the WMS service:"
    ]
   },
   {
@@ -89,13 +156,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66364a99-a19a-4226-b7c1-bf4864eed492",
+   "metadata": {},
+   "source": [
+    "Along with some WMS layer metadata:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bd3ebb32-91fb-4799-9d34-3988fc86960c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].title"
+    "wms[scene_id].title"
    ]
   },
   {
@@ -105,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].boundingBoxWGS84"
+    "wms[scene_id].boundingBoxWGS84"
    ]
   },
   {
@@ -125,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].styles"
+    "wms[scene_id].styles"
    ]
   },
   {
@@ -136,6 +211,14 @@
    "outputs": [],
    "source": [
     "wms.getOperationByName('GetMap').formatOptions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c169650b-9a81-4922-999c-cf8ff158b40c",
+   "metadata": {},
+   "source": [
+    "The user can visualize the WMS GetMap request from matplotlib"
    ]
   },
   {
@@ -168,6 +251,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4dc25083-e659-4688-a635-3be51d25a742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "image1=mpimg.imread('rgb.png')\n",
+    "fig = plt.figure(figsize=(12,7))\n",
+    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed686f05-d0ce-47e9-8060-539b3396930a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +302,7 @@
    "id": "2f8e4921-c5a7-4744-a16e-1a3d5a19d017",
    "metadata": {},
    "source": [
-    "### Folium demo"
+    "Alternatively, the Folium library is available to create a Leaflet map with the WMS layer"
    ]
   },
   {
@@ -228,18 +325,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[38, 24], zoom_start=6, tiles=None)\n",
+    "m = folium.Map(location=[37, 14], zoom_start=6, tiles=None)\n",
     "\n",
     "\n",
-    "folium.raster_layers.TileLayer(\n",
-    "    tiles='http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',\n",
-    "    attr='google',\n",
-    "    name='google maps',\n",
-    "    max_zoom=20,\n",
-    "    subdomains=['mt0', 'mt1', 'mt2', 'mt3'],\n",
-    "    overlay=False,\n",
-    "    control=True,\n",
-    ").add_to(m)\n",
+    "# folium.raster_layers.TileLayer(\n",
+    "#     tiles='http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',\n",
+    "#     attr='google',\n",
+    "#     name='google maps',\n",
+    "#     max_zoom=20,\n",
+    "#     subdomains=['mt0', 'mt1', 'mt2', 'mt3'],\n",
+    "#     overlay=False,\n",
+    "#     control=True,\n",
+    "# ).add_to(m)\n",
     "\n",
     "folium.raster_layers.WmsTileLayer(\n",
     "    url=wms_endpoint,\n",
@@ -262,7 +359,15 @@
    "id": "13b0a179-e2d3-4833-92bd-072d4d6ba756",
    "metadata": {},
    "source": [
-    "### WCS demo"
+    "### Data Download"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b195907-a07e-4400-a78d-291acacbff23",
+   "metadata": {},
+   "source": [
+    "After discovering and visualizing the dataset, the user can identify the WCS link from the catalogue record and use the OWSLib WCS client to download the dataset"
    ]
   },
   {
@@ -321,16 +426,20 @@
    "source": [
     "wcs.contents.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b5ed61-5ac2-441b-8371-e299ff7e5a67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-    }
-   },
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -343,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
