EOEPCA-289 add read of processing results STAC catalog

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "pursuant-permission",
+   "id": "recent-teens",
    "metadata": {},
    "source": [
     "# Demonstration\n",
@@ -11,8 +11,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "entitled-target",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils.DemoClient as client\n",
+    "import jwt\n",
+    "import json\n",
+    "import boto3\n",
+    "from awscli.customizations.s3.utils import split_s3_bucket_key"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "whole-italian",
+   "id": "imperial-cinema",
    "metadata": {},
    "source": [
     "## Application Development\n",
@@ -24,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-hardwood",
+   "id": "collect-hypothesis",
    "metadata": {},
    "source": [
     "## Demo Client Setup\n",
@@ -35,13 +49,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "israeli-static",
+   "id": "chemical-wednesday",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils.DemoClient as client\n",
-    "import jwt\n",
-    "import json\n",
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understanding-gamma",
+   "id": "nominated-style",
    "metadata": {},
    "source": [
     "### Authenticated User\n",
@@ -68,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungry-morris",
+   "id": "manufactured-carbon",
    "metadata": {
     "tags": []
    },
@@ -77,14 +88,14 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'demoA' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"demoA\"\n",
+    "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "blond-boulder",
+   "id": "least-integration",
    "metadata": {},
    "source": [
     "## Data Discovery\n",
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-optimization",
+   "id": "professional-photograph",
    "metadata": {},
    "source": [
     "### Resource Catalogue - OpenSearch"
@@ -105,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ordered-heath",
+   "id": "seven-organization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adolescent-document",
+   "id": "instrumental-wrestling",
    "metadata": {},
    "source": [
     "### Data Access Services - WMS, WCS (TBD)"
@@ -123,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considerable-timeline",
+   "id": "acting-consistency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-designation",
+   "id": "cardiovascular-density",
    "metadata": {},
    "source": [
     "## Processing - ADES\n",
@@ -143,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "widespread-investing",
+   "id": "blind-feeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-minute",
+   "id": "average-revision",
    "metadata": {},
    "source": [
     "### ADES: List Processes\n",
@@ -170,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "retired-corner",
+   "id": "bibliographic-quilt",
    "metadata": {
     "tags": []
    },
@@ -184,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-tokyo",
+   "id": "ready-edgar",
    "metadata": {},
    "source": [
     "### ADES: Deploy Application\n",
@@ -197,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-queens",
+   "id": "grand-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "early-abraham",
+   "id": "thorough-convertible",
    "metadata": {},
    "source": [
     "**_Dynamic Resource Protection_**<br>\n",
@@ -218,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "received-attitude",
+   "id": "fancy-squad",
    "metadata": {
     "tags": []
    },
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-hamilton",
+   "id": "packed-grounds",
    "metadata": {},
    "source": [
     "### ADES: Get Application Details\n",
@@ -243,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cubic-census",
+   "id": "classical-soldier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adequate-touch",
+   "id": "separate-affair",
    "metadata": {},
    "source": [
     "### ADES: Execute Application\n",
@@ -267,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "royal-smooth",
+   "id": "fatty-marble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-obligation",
+   "id": "immune-report",
    "metadata": {},
    "source": [
     "### ADES: Job Status\n",
@@ -290,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "played-alliance",
+   "id": "significant-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "found-albuquerque",
+   "id": "proof-disney",
    "metadata": {},
    "source": [
     "**Polling for Job Completion**<br>\n",
@@ -312,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hindu-surfing",
+   "id": "anonymous-toyota",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polished-silence",
+   "id": "emerging-thong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-cambridge",
+   "id": "editorial-eligibility",
    "metadata": {},
    "source": [
     "### ADES Stage-out\n",
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amber-simple",
+   "id": "decent-elite",
    "metadata": {},
    "source": [
     "### ADES: Job Result\n",
@@ -355,18 +366,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hydraulic-country",
+   "id": "cordless-begin",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - Job Result\n",
     "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
-    "demo.response_summary(response)"
+    "demo.response_summary(response)\n",
+    "print(\"stacCatalogUri:\", stacCatalogUri)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "typical-pursuit",
+   "id": "continent-necklace",
    "metadata": {},
    "source": [
     "### ADES: List Jobs\n",
@@ -377,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "undefined-stylus",
+   "id": "young-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-product",
+   "id": "marked-blind",
    "metadata": {},
    "source": [
     "### ADES: Undeploy Application\n",
@@ -399,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elect-tonight",
+   "id": "alpine-pantyhose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "described-monaco",
+   "id": "hybrid-radiation",
    "metadata": {
     "tags": []
    },
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412ba249-8e7f-49f4-a089-41ea163784d0",
+   "id": "conditional-might",
    "metadata": {},
    "source": [
     "## Policy Enforcement and Resource Sharing\n",
@@ -432,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25388954-ae16-4f64-b98a-222acc8433e4",
+   "id": "regulation-edition",
    "metadata": {},
    "source": [
     "### Deploy Application\n",
@@ -442,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "220c052a-5f02-4c37-92e0-cbe9903d6e54",
+   "id": "inner-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f493cda3-03c5-4342-9662-e58cf8682e20",
+   "id": "crazy-grammar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12ec647e-e7ae-412d-99b5-3a8252d5f184",
+   "id": "infinite-circle",
    "metadata": {},
    "source": [
     "### UserB Authenticates in the Platform\n",
@@ -474,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a160de-a2aa-4bcd-90e0-ef8c9ee58e9a",
+   "id": "broke-hands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561964f7-548b-415a-92fd-d405f9af4b70",
+   "id": "studied-costa",
    "metadata": {},
    "source": [
     "### UserB Attempts to Execute Demo User Apps\n",
@@ -498,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed21b21-bece-4ee3-90d3-78943904ad3e",
+   "id": "stainless-adjustment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39955275-e95a-480a-b12f-0048b84ebed0",
+   "id": "driving-spanish",
    "metadata": {},
    "source": [
     "### Owner Updates Access Policy\n",
@@ -521,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f5a799-0fd5-4b8b-b6f4-9ca790328534",
+   "id": "detected-singles",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9d1944-34a9-4ad0-9c5b-ab78f27395ea",
+   "id": "stable-eight",
    "metadata": {},
    "source": [
     "### UserB Executes Application Succesfully\n",
@@ -554,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f556b987-6165-4005-861b-e306bf060f6c",
+   "id": "minimal-creation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a56a0a2-58c8-4f21-a342-a67d25e55ce4",
+   "id": "waiting-basketball",
    "metadata": {},
    "source": [
     "## Workspace"
@@ -576,18 +588,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-terrorist",
+   "id": "correct-houston",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Init\n",
     "workspace_url = \"https://workspace-api.\" + base_domain\n",
-    "workspace_access_token = None"
+    "workspace_access_token = None\n",
+    "print(\"workspace_url:\", workspace_url)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "similar-savannah",
+   "id": "accredited-defense",
    "metadata": {},
    "source": [
     "### Workspace: Get Details"
@@ -596,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-street",
+   "id": "raising-combine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recent-collins",
+   "id": "hazardous-aside",
    "metadata": {},
    "source": [
     "### Inspect S3 Bucket"
@@ -618,40 +631,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abstract-choir",
+   "id": "saving-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bucket details\n",
     "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
     "s3_access = workspace_details[\"storage\"][\"credentials\"][\"access\"]\n",
-    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]"
+    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]\n",
+    "# Init S3 session for Creodias\n",
+    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "bucket = s3resource.Bucket(bucket_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "united-soviet",
+   "id": "sudden-conducting",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Quick hack S3 access\n",
-    "import boto3\n",
+    "stacCatalogUri = 's3://1a85398587cc4b5795dab4ab565dad34:rm-user-eric/wf-d8be29d6-a986-11eb-beca-7258940a7c04/catalog.json'\n",
     "\n",
-    "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
-    "session = boto3.session.Session()\n",
-    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "# Unpick s3 URL\n",
+    "_, stacCatalogKeyName = split_s3_bucket_key(stacCatalogUri)\n",
+    "print(\"stacCatalogKeyName:\", stacCatalogKeyName)\n",
     "\n",
-    "# List bucket contents\n",
-    "bucket = s3resource.Bucket(bucket_name)\n",
-    "for obj in bucket.objects.all():\n",
-    "    print(' ->', obj)"
+    "# Read the STAC file\n",
+    "stacFileObject = list(bucket.objects.filter(Prefix=stacCatalogKeyName))[0]\n",
+    "stacFileJson = json.loads(stacFileObject.get()['Body'].read())\n",
+    "print(json.dumps(stacFileJson, indent=2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bored-visitor",
+   "id": "fatty-vatican",
    "metadata": {},
    "source": [
     "## Results Consumption\n",
