Added QGIS demonstration

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -923,6 +923,198 @@
    "source": [
     "Please note in the above result that the total of records is a combination of the system and workspace catalogues."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8024d488-6a53-4821-b491-7c33f2a1612c",
+   "metadata": {},
+   "source": [
+    "### QGIS catalogue demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f02be03-c660-40ce-b68b-c183ccfeb4cc",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the system level resource catalogue endpoint to discover and visualize datasets through QGIS desktop application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39965188-80f0-4c7e-a060-2ccfcfe2c5b4",
+   "metadata": {},
+   "source": [
+    "![QGIS main window with OSM loaded](img/Screenshot_QGIS_01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb08312-ad0e-406e-965b-bbd6be2013ac",
+   "metadata": {},
+   "source": [
+    "The user starts up QGIS and loads some data, in this case the OSM base map. The MetaSearch tool is available on the toolbar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8494e84b-6c47-4cf8-90a5-c20524bf8359",
+   "metadata": {},
+   "source": [
+    "![MetaSearch main window](img/Screenshot_QGIS_02.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1dc363d-e757-47ea-b5fb-5f3a2b7edcf5",
+   "metadata": {},
+   "source": [
+    "The user can add a new catalogue endpoint by pressing the New button, then needs to add the Resource Catalogue endpoint in the URL text box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3d15195-392d-4d4a-867e-53e50ddd8407",
+   "metadata": {},
+   "source": [
+    "![EOEPCA Resource Catalogue in QGIS](img/Screenshot_QGIS_03.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20b77ef1-0e9f-4f4b-a1a9-274fb3f239e5",
+   "metadata": {},
+   "source": [
+    "The service metadata for the Resource Catalogue are available from the Service Info button"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "566204d6-b0a2-4340-ac5b-3a5f097369ca",
+   "metadata": {},
+   "source": [
+    "![Service Info](img/Screenshot_QGIS_04.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc321c3-fdea-4e71-a638-8719222f980d",
+   "metadata": {},
+   "source": [
+    "The Service Capabilities are also available from the 'GetCapabilities Response' button"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da0c977-cce3-49db-ac7d-af0dd00b2410",
+   "metadata": {},
+   "source": [
+    "![Service Capabilities](img/Screenshot_QGIS_05.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea1dbb07-0d14-4cde-87f8-05c40c47eb2e",
+   "metadata": {},
+   "source": [
+    "The user moves to the 'Search' tab of MetaSearch main window to perform a catalogue search (in this case by adding a bounding box)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b86d3d-8bd3-4037-9492-e3d839f8ff7e",
+   "metadata": {},
+   "source": [
+    "![Search with bbox](img/Screenshot_QGIS_06.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2df457b-179d-46b8-8c74-5d6d26845a06",
+   "metadata": {},
+   "source": [
+    "By pressing 'Search' the Resource Catalogue is performing a dataset search. Then by selecting a result, the dataset bbox is shown on the map."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6b3b3f8-a264-45ad-a80a-0a0848b032e1",
+   "metadata": {},
+   "source": [
+    "![Search for datasets](img/Screenshot_QGIS_07.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a6fcffd-a9f8-4fa9-a1bc-b119b9228e52",
+   "metadata": {},
+   "source": [
+    "The user can choose to view the selected dataset by selecting the 'Add Data' button, where MetaSearch automatically discovers available WMS, WFS, WCS links and enables the capability to load the data directly to QGIS map. In this case, the WMS and WCS endpoints are available from the Data Access links included in the catalogue record."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ed7ec1-d646-41bb-9e1e-ee1e5eb2b11e",
+   "metadata": {},
+   "source": [
+    "![Adding Data](img/Screenshot_QGIS_08.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e373a8-5f07-4ee1-99e1-794fc7cdc475",
+   "metadata": {},
+   "source": [
+    "By selecting 'Add WMS/WMTS' the default QGIS WMS dialog shows up. Here, the user can browse through the available layers offered by the Data Access component and select a layer to add to the map."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f1d64a4-5e03-451c-a207-0ba89a300d4d",
+   "metadata": {},
+   "source": [
+    "![QGIS WMS dialog](img/Screenshot_QGIS_09.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88edfa7-3c92-4a48-8c94-4320885718e2",
+   "metadata": {},
+   "source": [
+    "After selecting a layer, QGIS will add the layer to the map and user can preview the selected dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8df67b9-6198-4154-adc7-0b9d1cde352b",
+   "metadata": {},
+   "source": [
+    "![Data preview](img/Screenshot_QGIS_10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a1718a-6206-4eb9-82ac-fa538de7f184",
+   "metadata": {},
+   "source": [
+    "By double clicking the catalogue record, the user can also preview the record metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0bfb63-fdaf-4dde-a632-bf6d8eb71cbd",
+   "metadata": {},
+   "source": [
+    "![Metadata preview](img/Screenshot_QGIS_11.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b273e78d-0980-40aa-9eab-9a5c4e0ce371",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
